--- a/images/my-selection/style.css
+++ b/images/my-selection/style.css
@@ -3,7 +3,14 @@ body{
 }
 h1{
     font-size: 50px;
-  
+
+}
+h2{
+    font-size: 40px;
+    color: rgb(48, 30, 30);
+}
+h3{ font-size: 30px;
+
 }
 
 .display-flex{
@@ -35,4 +42,24 @@ h1{
     display: flex;
     background-image: url(Frame\ 58.jpg);
     background-size: 100%;
+    margin: 0%;
 }
+.center{
+    text-align: center;
+    color: rgb(48, 30, 30);
+}
+.food-iteam{
+    display: flex;
+}
+.one-third img{width: 100%;
+
+}
+.one-third{
+    width: 90%;
+    margin-left: 4%;
+    margin-right: 1%;
+    box-shadow: 10px 10px 40px gray;
+    padding: 20px;
+    border-radius: 20px;
+}
+
