--- a/images/my-selection/style.css
+++ b/images/my-selection/style.css
@@ -3,7 +3,7 @@ body{
 }
 h1{
     font-size: 50px;
-
+    font-weight: 900;
 }
 h2{
     font-size: 40px;
@@ -63,3 +63,29 @@ h3{ font-size: 30px;
     border-radius: 20px;
 }
 
+.public-figur-flex{
+    display: flex;
+    box-shadow: 10px 10px 40px;
+    padding: 20px;
+    margin-left: 4%;
+    margin-right: 1%;
+    margin-top: 50px;
+    border-radius: 20px;
+
+}
+.last-width{
+    width: 100%;
+    margin-left: 7.5%;
+    margin-right: 7.5%;
+
+}
+.footer-text{
+    text-align: center;
+    margin-top: 40px;
+    background-color: rgb(41, 41, 41);
+    background-size: 100%;
+    color: white;
+}
+.gold-color{
+    color: goldenrod;
+}
